# cmakestudy

./: .gitignore  README.md
Demo1/: CMakeLists.txt  main.cpp  readme.txt
Demo2/: CMakeLists.txt  main.cpp  readme.txt
Demo3/: CMakeLists.txt  Demo3  main.cpp  readme.txt
Demo3/math/: CMakeLists.txt
Demo4_custombuild/: .CMakeLists.txt.swp  CMakeLists.txt  main.cpp  readme.txt
Demo5_gdb/: CMakeLists.txt  Demo
Demo5_install/: CMakeLists.txt  readme.txt
Demo5_test/: CMakeLists.txt  Demo
Demo5_test/math/: CMakeLists.txt  MathFunctions.h
Demo6_check_env/: CMakeLists.txt  Demo  config.h  config.h.in  main.cpp  readme.txt
Demo6_check_env/math/: MathFunctions.cpp
Demo7_version/: CMakeLists.txt  Demo  main.cpp
Demo8_package/: CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Demo  Demo-1.0.1-Linux.sh  License.txt  config.h.in  readme.txt
Demo8_package/Demo-1.0.1-Linux/include/: config.h
Demo8_package/_CPack_Packages/Linux/TZ/: Demo-1.0.1-Linux.tar.Z
installdir/share/doc/cmake/t2/: hello.txt
t2/: CMakeLists.txt  README
t2/src/: CMakeLists.txt  main.c
t3/: CMakeLists.txt  README
t3/lib/: CMakeLists.txt  hello.c  hello.h
t4/: CMakeLists.txt  README
t4/src/: CMakeLists.txt  main.c
t5/: CMakeLists.txt  README
t5/src/: CMakeLists.txt  main.c
t6/: CMakeLists.txt  README
t6/cmake/: FindHELLO.cmake
t6/src/: CMakeLists.txt  main.c
