SET(LIBHELLO_SRC hello.c)
# add shared library
ADD_LIBRARY(hello SHARED ${LIBHELLO_SRC})
# add static libray
ADD_LIBRARY(hello_static STATIC ${LIBHELLO_SRC})

# set the output name of hello_static to hello
SET_TARGET_PROPERTIES(hello_static PROPERTIES OUTPUT_NAME "hello")

# set version
SET_TARGET_PROPERTIES(hello PROPERTIES VERSION 1.2 SOVERSION 1)

SET_TARGET_PROPERTIES(hello_static PROPERTIES CLEAN_DIRECT_OUTPUT 1)
SET_TARGET_PROPERTIES(hello PROPERTIES CLEAN_DIRECT_OUTPUT 1)

INSTALL(TARGETS hello LIBRARY DESTINATION lib)
INSTALL(TARGETS hello_static ARCHIVE DESTINATION lib)
INSTALL(FILES hello.h DESTINATION include/hello)
